[package]
name = "solana-spining"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solana-spining"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.21.2", features = ["rt-multi-thread", "fs", "full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
toml = "0.8"
anyhow = "1.0.62"
log = "0.4.17"
env_logger = "0.11"
bincode = "1.3"
solana-entry = "2.1.7"
solana-sdk = "2.1.7"
solana-transaction-status = "2.1.7"
backoff = { version = "0.4.0", features = ["tokio"] }
tokio-stream = "0.1"
tonic = "0.12.1"
jito-protos = { path = "./jito_protos" }

yellowstone-grpc-client = "4.0.0"
yellowstone-grpc-proto = { version = "4.0.0", default-features = false, features = ["plugin"] }
futures-util = "0.3.24"
futures = "0.3.24"
prost = "0.13"
tonic-health = "0.12"
base64 = "0.22"
bs58 = "0.5"
clap = { version = "4.3.0", features = ["derive"] }

# 交易执行相关依赖
solana-client = "2.1.7"
solana-rpc-client = "2.1.7"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
thiserror = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# IDL解析相关依赖
spl-token = "7.0.0"
spl-associated-token-account = "3.0.2"
solana-account-decoder = "2.1.7"
hex = "0.4"
solana-account-decoder-client-types = "2.1.7"

# Raydium Launchpad 相关依赖
raydium_launchpad_interface = { path = "./parsers/raydium_launchpad_interface", features = ["serde"], optional = true }
serde_with = "3.0"

# 优化性能相关依赖
dashmap = "6.1.0"  # 无锁并发HashMap，替代RwLock<HashMap>
regex = "1.10"     # 正则表达式预编译
aho-corasick = "1.1"  # 多模式字符串匹配算法
lru = "0.12"       # LRU缓存

[build-dependencies]
tonic-build = "0.12"

[features]
default = ["letsbonk"]
letsbonk = ["raydium_launchpad_interface"]
